# nodus

./: Cargo.toml  LICENSE  README.md  rust-toolchain.toml
.github/ISSUE_TEMPLATE/: bug_report.md
circuits/: tacktflankengesteuertes-flipflop.ron
src/: component.rs  file_browser.rs  gate.rs  lib.rs  main.rs  node.rs  radial_menu.rs  rmenu.rs  world2d.rs
src/gate/: core.rs  file_browser.rs  graphics.rs  serialize.rs  systems.rs  ui.rs  undo.rs
src/gate/graphics/: background.rs  clk.rs  connection_line.rs  connector.rs  gate.rs  highlight.rs  light_bulb.rs  segment_display.rs  selector.rs  toggle_switch.rs
