[package]
name = "nodus"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.5", features = ["dynamic"] }
bevy_prototype_lyon = "0.3"
bevy_interact_2d = "0.5.3"

[toolchain]
channel = "nightly"
