[package]
name = "nodus"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { src = "0.5", features = ["dynamic", "wayland"] }
bevy_prototype_lyon = "0.3"
bevy_egui = "0.8"
bevy_asset_loader = "0.6"

[toolchain]
channel = "nightly"

# Enable optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

# Maybe also enable only a small amount of optimization for our code:
[profile.dev]
opt-level = 3

